--- a/src/frontend/student-view/src/App.css
+++ b/src/frontend/student-view/src/App.css
@@ -1,3 +1,6 @@
+*{
+  box-sizing: border-box;
+}
 .app{
   height: 100vh;
 }
@@ -101,6 +104,9 @@
 }
 
 /* Students page starts here */
+.students{
+ 
+}
 .students-container{
   margin: 1rem;
   height: 100%;
@@ -126,8 +132,8 @@
   font-size: 2rem;
 }
 
-.info-container button{
-  background-color: #66B6D2;
+.info-container button, .drawer-form button, .drawer-close-btn{
+  background-color: #2596BE;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-right: 1rem;
@@ -135,11 +141,12 @@
   font-weight: bold;
   border: 1px solid #dddd;
   border-radius: 5px;
+  color: #fff;
 
 }
-.info-container button:hover{
-  background-color: #2596BE;
-  color: #ffff;
+.info-container button:hover, .drawer-form button:hover, .drawer-close-btn:hover{
+  background-color: #66B6D2;
+  color: black;
 }
 
 .table-container{
@@ -190,6 +197,72 @@
 
 }
 
+
+/* Drawer begins here */
+
+.drawer{
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  margin-top: 0px;
+  height: 100%;
+  width: 0px;
+  background-color: #fff;
+  box-shadow: -4px 0px 16px 0 rgba(0,0,0,0.1);
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: 1px solid #dddd;
+  
+}
+
+.drawer-active{
+  width: 500px;
+  transition: all 0.3s ease-in-out;
+}
+
+.drawer-container{
+  display: flex;
+  flex-direction: column;
+  padding: .5rem 50px;
+  gap: 3rem;
+}
+
+.drawer-close-btn{
+  width: fit-content;
+}
+
+.drawer-form-container{
+  width: 400px;
+  border: 1px solid #dddd;
+  padding: .5rem;
+  border-radius: 5px;
+}
+
+.drawer-form span{
+  display: block;
+  margin-bottom: 0.5rem;
+  
+}
+
+.drawer-form input{
+  width: 100%;
+  font-size: inherit;
+  padding: .5rem;
+  border: 1px solid #dddd;
+  border-radius: 5px;
+}
+
+.drawer-form input:focus{
+  outline: none;
+  border: 2px solid #dddd;
+}
+
+.drawer-form{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+}
 
 
 
