--- a/src/frontend/student-view/src/App.css
+++ b/src/frontend/student-view/src/App.css
@@ -332,3 +332,91 @@
   margin-bottom: .7rem;
 }
 
+
+
+/* Notification starts here */
+
+.notification-wrapper{
+   position: fixed;
+   top: 10px;
+   right: 10px;
+   width: 400px;
+
+}
+
+.notification{
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
+  margin-bottom: 1rem;
+  background-color: #fff;
+  padding-top: 5px;
+  padding-bottom: 0;
+  overflow: hidden;
+}
+
+.notification-info-container{
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  height: 80%;
+  justify-content: space-between;
+
+
+}
+
+.notification-icon-container{
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.notification-icon{
+  transform: scale(1.8);
+
+
+}
+.notification-message-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+}
+
+.notification-message-container span{
+  display: block;
+}
+
+.notification-btn-container{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  height: 100%;
+
+}
+.notification-close-btn{
+  background-color: #fff;
+  border: none;
+  border-radius: 50%;
+}
+
+.notification-close-btn:active{
+  background-color: #dddd;
+}
+
+.notification-bar{
+  height: 10px;
+  margin-top: 10px;
+}
+
+.notification-bar.error{
+  background-color: red;
+}
+
+.notification-bar.success{
+  background-color: green;
+}
+
+
+
